--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>amos dixon</title>
+    <link rel="stylesheet" href="styles.css"> <!-- We'll create this CSS file next -->
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="container">
+        <section class="left-section">
+            <h1>amos dixon</h1>
+            <p>Last updated: 02/07/2024</p>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Publications</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </section>
+        <section class="right-section">
+            <p>This is some placeholder text. Replace it with your actual content.</p>
+        </section>
+    </div>
 </body>
 </html>
