--- a/index.html
+++ b/index.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>amos dixon</title>
-    <link rel="stylesheet" href="styles.css"> <!-- We'll create this CSS file next -->
+    <title>Amos Dixon</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <section class="left-section">
-            <h1>amos dixon</h1>
-            <p>Last updated: 02/07/2024</p>
+        <div class="left-section">
+            <h1>Amos Dixon</h1>
+            <h2>Updated 02172024</h2>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Publications</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#publications">Publications</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
-        </section>
-        <section class="right-section">
-            <p>This is some placeholder text. Replace it with your actual content.</p>
-        </section>
+        </div>
+        <div class="right-section">
+            <div id="home">
+                <h2>Home</h2>
+                <p>Placeholder text for Home</p>
+            </div>
+            <div id="projects">
+                <h2>Projects</h2>
+                <p>Placeholder text for Projects</p>
+            </div>
+            <div id="publications">
+                <h2>Publications</h2>
+                <p>Placeholder text for Publications</p>
+            </div>
+            <div id="contact">
+                <h2>Contact</h2>
+                <p>Placeholder text for Contact</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
