--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Amos Dixon</title>
+    <title>Projects</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -11,17 +11,18 @@
             <h5>updated 02.17.2024</h5>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="projects.html" class="active">Projects</a></li>
                     <li><a href="publications.html">Publications</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
         <div class="right-section">
-            <div id="home">
-                <h2>Home</h2>
-                <p>Placeholder text for Home</p>
+            <div id="projects">
+                <h2>Projects</h2>
+                <p>Placeholder text for Projects</p>
+            </div>
         </div>
     </div>
 </body>
