--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 </head>
 <body>
     <div class="container">
-        <div class="left-section">
+        <div class="title-section">
             <h1>amos dixon</h1>
+        </div>
+        <div class="buffer-section">
+            <!-- content -->
+        </div>
+        <div class="nav-section">
             <h5>updated 02.17.2024</h5>
             <nav>
                 <ul>
@@ -18,9 +23,8 @@
                 </ul>
             </nav>
         </div>
-        <div class="right-section">
+        <div class="body-section">
             <div id="home">
-                <h2>Home</h2>
                 <p>Placeholder text for Home</p>
         </div>
     </div>
