--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,13 @@
 </head>
 <body>
     <div class="container">
-        <div class="left-section">
+        <div class="title-section">
             <h1>amos dixon</h1>
+        </div>
+        <div class="buffer-section">
+            <!-- content -->
+        </div>
+        <div class="nav-section">
             <h5>updated 02.17.2024</h5>
             <nav>
                 <ul>
@@ -18,11 +23,8 @@
                 </ul>
             </nav>
         </div>
-        <div class="right-section">
-            <div id="contact">
-                <h2>Contact</h2>
-                <p>Placeholder text for Contact</p>
-            </div>
+        <div class="body-section">
+            <p>Placeholder text for Contact</p>
         </div>
     </div>
 </body>
