--- a/publications.html
+++ b/publications.html
@@ -24,7 +24,8 @@
             </nav>
         </div>
         <div class="body-section">
-            <p>Placeholder text for Publications</p>
+            <p>Saravanapandian, V. et al. Abnormal sleep physiology in children with 15q11.2-13.1 duplication (Dup15q) syndrome. Molecular Autism 12, 54 (2021). </p>
+            <p><a href="https://doi.org/10.1186/s13229-021-00460-8" target="_blank">https://doi.org/10.1186/s13229-021-00460-8</a></p>
         </div>
     </div>
 </body>
