--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<div class="title-section">
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Amos Dixon</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="title-section">
             <h1>amos dixon</h1>
         </div>
         <div class="buffer-section">
@@ -14,3 +22,10 @@
                 </ul>
             </nav>
         </div>
+        <div class="body-section">
+            <div id="home">
+                <p>Placeholder text for Home</p>
+        </div>
+    </div>
+</body>
+</html>
