--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,8 @@
             </nav>
         </div>
         <div class="body-section">
-            <p>Placeholder text for Contact</p>
+            <p><a href="mailto:amosdixonxc@g.ucla.edu">amosdixonxc@g.ucla.edu</a>.</p>
+            <p><a href="https://github.com/amosdixonxc" target="_blank">https://github.com/amosdixonxc</a>.</p>
         </div>
     </div>
 </body>
